<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCarActivity"
    android:id="@+id/layoutAddCar">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddCar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="left"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginTop="?attr/actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_add_header"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_corner"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCarPlateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/car_add_plate"
            android:maxLength="7"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCarPlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/car_add_manufacturer"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="5dp"/>

            <Spinner
                android:id="@+id/sprCarManufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCarModelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/car_add_model"
            android:maxLength="7"
            app:endIconMode="clear_text"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCarModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/car_add_color"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="5dp"/>

            <Spinner
                android:id="@+id/sprCarColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">
            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/car_add_year"
                android:textColor="@android:color/darker_gray"
                android:layout_marginLeft="5dp"/>

            <Spinner
                android:id="@+id/sprCarYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSaveCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/baseline_save_white_24"
        app:elevation="0dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabClearCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="86dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/baseline_clear_white_24"
        app:elevation="0dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>